--- a/src/main/resources/templates/Bookings/payment.html
+++ b/src/main/resources/templates/Bookings/payment.html
@@ -68,7 +68,7 @@
             <br>
             <h2 align="center" >Por favor, ingrese los datos de su tarjeta</h2>
             <div align="center">
-                <form action="#" th:action="@{/Bookings/pago}" th:object="${payment}" method="post">
+                <form action="#" th:action="@{/Bookings/confirmed}" th:object="${payment}" method="post">
                     <div class="form-group">
                         Tarjeta (Mastercard,Visa,etc):
                         <input type="text" required th:field="*{card}" class="form-control col-sm-3"/>
