--- a/src/main/resources/templates/Bookings/verHabitaciones.html
+++ b/src/main/resources/templates/Bookings/verHabitaciones.html
@@ -2,7 +2,7 @@
 <html lang="en" xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
-    <title>Reserva tu habitacion</title>
+    <title>Reserva tu habitación</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
@@ -10,85 +10,106 @@
     <!--FONT OSWALD-->
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400&display=swap');
+
+        body {
+            font-family: 'Oswald', sans-serif;
+            background-color: #f8f9fa;
+            color: #343a40;
+        }
+
+        .nav-main {
+            background-color: #343a40;
+            padding: 1rem;
+        }
+
+        .nav-main a {
+            color: #ffffff;
+            text-decoration: none;
+            margin: 0 15px;
+        }
+
+        .nav-main a:hover {
+            color: #ffd700; /* Color dorado en hover */
+        }
+
+        .tit {
+            color: #343a40;
+            margin-top: 20px;
+        }
+
+        .btn-primary {
+            background-color: #ffd700; /* Color dorado */
+            border-color: #ffd700;
+        }
+
+        .btn-primary:hover {
+            background-color: #ffc107; /* Color más oscuro al pasar el ratón */
+            border-color: #ffc107;
+        }
+
+        .table {
+            margin-top: 20px;
+        }
+
+        .alert {
+            margin-top: 20px;
+        }
+
+        .container {
+            background-color: #ffffff;
+            border-radius: 8px;
+            padding: 20px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        }
     </style>
-    <!--CUSTOM CSS-->
-    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 
-<!--<img class="img-fondo" src="../../static/img/imagen-fondo.jpg" alt="imagen fondo">-->
-<nav class="nav-main">
-    <a href="/Users">
-        <img src="../img/logo.jpg" alt="logo-hotel" class="nav-brand">
-    </a>
-    <ul class="nav-menu">
+    <nav class="nav-main">
+        <a href="/Users">
+            <img src="../img/logo.jpg" alt="logo-hotel" class="nav-brand" style="height: 50px;">
+        </a>
+        <ul class="nav-menu d-inline-block">
+            <li class="d-inline"><a href="/Bookings/availability">Reservar habitación</a></li>
+            <li class="d-inline"><a href="/Bookings/VerHabitaciones">Nuestras habitaciones</a></li>
+            <li class="d-inline"><a href="#">Quienes somos</a></li>
+            <li class="d-inline"><a href="/Bookings/ConsultaReservas">Consultá tus reservas!</a></li>
+        </ul>
+        <ul class="nav-regis float-right">
+            <li>
+                <a><label id="Users" th:text="${#httpServletRequest.getRemoteUser ()}"></label></a>
+            </li>
+            <li>
+                <a href="/logout" methods="post" th:action="@{/logout}">Logout</a>
+            </li>
+        </ul>
+    </nav>
 
-        <li>
-            <a href="/Bookings/availability">
-                Reservar habitacion
-            </a>
-        </li>
-
-        <li>
-            <a href="/Bookings/VerHabitaciones">
-                Nuestras habitaciones
-            </a>
-        </li>
-
-        <li>
-            <a href="#">
-                Quienes somos
-            </a>
-        </li>
-        <li>
-            <a href="/Bookings/ConsultaReservas">
-                Consultá tus reservas!
-            </a>
-        </li>
-
-
-    </ul>
-    <ul class="nav-regis">
-        <li>
-            <a href="/Users/new">
-                Registrate
-            </a>
-        </li>
-
-    </ul>
-
-
-</nav>
-
-<div  align="center"  >
+<div class="container" align="center">
     <br>
     <h1 class="tit">Nuestras Habitaciones</h1>
     <br>
-    <div class="container">
-        <table th:if="${rooms.size()>0}" class="table table-bordered table-dark table-sm">
-            <thead>
+    <table th:if="${rooms.size()>0}" class="table table-bordered table-dark table-sm">
+        <thead>
             <tr>
-                <th>Habitacion</th>
-                <th>Ocupacion</th>
+                <th>Habitación</th>
+                <th>Ocupación</th>
                 <th>Facilidades</th>
                 <th>Precio</th>
             </tr>
-            </thead>
-            <tbody>
-
+        </thead>
+        <tbody>
             <tr th:each="room: ${rooms}">
                 <td><span th:text="${room.name}">Room </span></td>
                 <td><span th:text="${room.occupancy}">Occupancy</span></td>
                 <td><span th:text="${room.facilities}">Facilities</span></td>
-                <td><span th:text="${room.price}+'$'">Price</span></td>
+                <td><span th:text="${room.price} + '$'">Price</span></td>
             </tr>
-            </tbody>
-        </table>
-    </div>
+        </tbody>
+    </table>
 </div>
-<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
 
+<script src="https://code.jquery.com/jquery-3.5.1.js"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
-
 </html>
