--- a/src/main/resources/templates/Users/index.html
+++ b/src/main/resources/templates/Users/index.html
@@ -89,7 +89,7 @@
                 <a class="nav-link" href="/Bookings/VerHabitaciones">Nuestras habitaciones</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Quienes somos</a>
+                <a class="nav-link" href="/Bookings/about">Quienes somos</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="/Bookings/ConsultaReservas">Consultá tus reservas!</a>
