--- a/src/main/resources/templates/Bookings/about.html
+++ b/src/main/resources/templates/Bookings/about.html
@@ -129,22 +129,22 @@
             <div class="col-md-3 founder">
                 <img src="../img/founder1.jpg" alt="Founder 1">
                 <h3>Fundador 1</h3>
-                <p>Descripción del fundador 1.</p>
+                <p>Experto en mercadotecnica y administracion turistica en el exterior , con diplomado en la perstiojosa universidad Sideral Carrion</p>
             </div>
             <div class="col-md-3 founder">
                 <img src="../img/founder2.jpg" alt="Founder 2">
                 <h3>Fundador 2</h3>
-                <p>Descripción del fundador 2.</p>
+                <p>inversionita de alto nivel y cotizacion en bolsa , cuenta con buenos contactos en el rubro y una consistente agenda de contactos</p>
             </div>
             <div class="col-md-3 founder">
                 <img src="../img/founder3.jpg" alt="Founder 3">
                 <h3>Fundador 3</h3>
-                <p>Descripción del fundador 3.</p>
+                <p>Accionista de recursos humanos y transporte dentro u fuera del hotel , adminstracion del personal y proveedores de recursos </p>
             </div>
             <div class="col-md-3 founder">
                 <img src="../img/founder4.jpg" alt="Founder 4">
                 <h3>Fundador 4</h3>
-                <p>Descripción del fundador 4.</p>
+                <p>experto en marketing digital y promotor del hotel OK dentro de las 4 sedes en el Peru</p>
             </div>
         </div>
 
@@ -154,9 +154,9 @@
 
     <footer class="footer">
         <p>Contacto:</p>
-        <a href="https://wa.me/1234567890" target="_blank"><i class="fab fa-whatsapp"></i> WhatsApp</a>
+        <a href="https://wa.me/981643496" target="_blank"><i class="fab fa-whatsapp"></i> WhatsApp</a>
         <a href="https://facebook.com" target="_blank"><i class="fab fa-facebook"></i> Facebook</a>
-        <p>Teléfono: +123 456 7890</p>
+        <p>Teléfono: +51 957385416</p>
     </footer>
 
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"></script>
